# Spaghetti-990

./: README.md  pyproject.toml
app/: irs_xml.py  main.py  models.py  propublica.py
scripts/: register.py
