[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "990-entity-graph"
version = "0.1.0"
description = "Healthcare org entity graph from IRS 990 Schedule R filings"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "lxml>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
